--- a/src/bioregistry/app/templates/collections.html
+++ b/src/bioregistry/app/templates/collections.html
@@ -54,9 +54,9 @@
         <table id="table-entries" class="table table-striped table-hover ">
             <thead>
             <tr>
-                <td>Name</td>
-                <td>Size</td>
-                <td>Description</td>
+                <th scope="col">Name</th>
+                <th scope="col">Size</th>
+                <th scope="col">Description</th>
             </tr>
             </thead>
             {% for identifier, row in rows %}
