--- a/src/bioregistry/app/templates/base.html
+++ b/src/bioregistry/app/templates/base.html
@@ -33,7 +33,8 @@
 
                 .footer {
                     margin-top: auto;
-                    padding-top: 1em;
+                    padding-top: 2em;
+                    padding-bottom: 3em;
                     background-color: #f5f5f5;
                 }
             </style>
@@ -187,7 +188,11 @@
 {% endblock %}
 
 <footer class="footer">
-    {{ config.METAREGISTRY_FOOTER | safe }}
+    <div class="row justify-content-center">
+        <div {% block footercontainerattr %}class="col-md-10 col-lg-7 pl-5 pr-5"{% endblock %}>
+            {{ config.METAREGISTRY_FOOTER | safe }}
+        </div>
+    </div>
 </footer>
 
 {% block scripts %}
